Versión del Proyecto Tienda de la serie de Videos Semana 1. Introducción a HTML

--- a/src/main/resources/static/Ejemplo2.html
+++ b/src/main/resources/static/Ejemplo2.html
@@ -1,26 +1,19 @@
-<!DOCTYPE html> <!-- Indica que HTML 5 es la sintaxis del proyecto-->
-<!--
-Éstas son las etiquetas para comentarios
--->
-<html> <!-- Marca el incio del texto HTML -->
-    <head> <!-- Encabezado y configuración general de la página -->
+<!DOCTYPE html>
+<html>
+    <head>
         <title>Tienda en Línea</title>
-        <meta charset="UTF-8"> <!-- Codificación del texto (caracteres especiales
-                               entre otros) -->
+        <meta charset="UTF-8">
     </head>
-    <body> <!-- Cuerpo del proyecto, todo lo que el usuario ve en el equipo -->
-        <a href="Ejemplo9.html">Back</a>|<!-- Enlaces de referencia dentro del 
-        mismo sitio-->
+    <body> 
+        <a href="Ejemplo9.html">Back</a>|
         <a href="index.html">Home</a>|
-        <a href="Ejemplo2.html">Next</a><br>
-        <div> <!-- Define un bloque en la página, ampliamente utilizado por los
-            diseñadores web-->
-        <h1 style="text-align: center">Home</h1> <!-- Encabezado de nivel uno, por teoría toda
-        página sólo debe tener un encabezado de nivel uno-->
-        <p>Bienvenidos a la página de la Tienda en Línea</p> <!-- Párrafo, la 
-        etiqueta añade un enter o un "salto de línea" automáticamente-->
+        <a href="Ejemplo3.html">Next</a><br>
+        <div> 
+            <h1 style="text-align: center">Home</h1> 
+            <p>Bienvenidos a la página de la Tienda en Línea</p>
         </div>
-        <p style="text-align: left">Lorem ipsum dolor sit amet consectetur 
+        <div style="text-align: center">
+        <p>Lorem ipsum dolor sit amet consectetur 
             adipiscing, elit mattis himenaeos sociosqu vel donec, eleifend blandit 
             suspendisse pulvinar massa. Lectus nisi viverra interdum urna ante 
             cursus sem elementum non ultrices cubilia tortor, luctus vel vehicula 
@@ -31,8 +24,8 @@
             egestas facilisis mauris viverra hac pretium. At hendrerit vestibulum 
             blandit dapibus eleifend odio luctus eu, posuere maecenas orci tellus 
             dignissim porta aptent mauris faucibus, fusce feugiat imperdiet suscipit 
-            habitant purus non. <!-- Etiqueta con estilos de texto -->
-        <p style="text-align: rigth">Blandit cubilia scelerisque fusce imperdiet 
+            habitant purus non.
+        <p>Blandit cubilia scelerisque fusce imperdiet 
             ac platea sociis curae, venenatis per convallis sociosqu risus aliquam 
             quis morbi, vel integer rhoncus feugiat donec nam arcu. Curae facilisi 
             ac tortor diam velit venenatis lobortis justo in cum netus, nullam 
@@ -41,7 +34,7 @@
             tellus. Eget morbi suspendisse tincidunt in arcu faucibus sociis magnis, 
             risus libero tortor sem quam magna ut phasellus nullam, est auctor 
             potenti donec platea ridiculus eros.
-        <p style="text-align: center">Ullamcorper habitant tempus per vel odio eu 
+        <p>Ullamcorper habitant tempus per vel odio eu 
             porttitor phasellus duis ridiculus dapibus fermentum aenean, blandit 
             himenaeos malesuada eleifend viverra netus natoque conubia augue risus 
             dictum. Varius nunc tempor sed aenean sodales quam cubilia fusce, porta 
@@ -52,8 +45,8 @@
             Sed netus nascetur integer curabitur sociosqu hendrerit senectus dui, 
             quis rhoncus sociis est aptent pharetra varius, viverra tincidunt etiam 
             porttitor aenean ut blandit.
-        <br><!-- Salto de línea o "enter" -->
-        <br>
+        </div>    
+            <br>
+            <br>
         <p>Última línea</p>
     </body>
-</html> <!-- Marca el final del texto HTML -->
