Versión del Proyecto de la serie de videos semana No.2, Introducción CSS

--- a/src/main/resources/static/Ejemplo2.html
+++ b/src/main/resources/static/Ejemplo2.html
@@ -46,7 +46,8 @@
             quis rhoncus sociis est aptent pharetra varius, viverra tincidunt etiam 
             porttitor aenean ut blandit.
         </div>    
-            <br>
+            <br><!-- Salto de línea o "enter" (brake) empty tags porque no tiene una
+            etiqueta de cierre-->
             <br>
         <p>Última línea</p>
     </body>
