--- a/src/main/resources/static/Ejemplo8.html
+++ b/src/main/resources/static/Ejemplo8.html
@@ -10,7 +10,9 @@
         <a href="Ejemplo9.html">Next</a><br>
         <h1>Ejemplos de imágenes</h1>
         <img src="Images/Marmota.jfif" alt="Imagen de una Marmota" width="100"/>
-        <!-- Etiqueta para incluir imágenes al proyecto-->
+        <!-- Etiqueta para incluir imágenes al proyecto. img tiene 2 atributos 
+        requeridos, src busca la imagen y alt muestra un texto en caso de que la 
+        imagen no cargue-->
         <img src="Images/Tigre.jfif" alt="Imagen de un Tigre"/>
     </body>
 </html>
