--- a/src/main/resources/static/Ejemplo6.html
+++ b/src/main/resources/static/Ejemplo6.html
@@ -8,14 +8,14 @@
         <a href="Ejemplo5.html">Back</a>|
         <a href="index.html">Home</a>|
         <a href="Ejemplo7.html">Next</a><br>
-        <ul><!-- Lista no ordenada -->
+        <ul><!-- Lista no ordenada un ordered list -->
             <li>Item uno</li><!-- Item de lista -->
             <li>Item uno</li>
             <li>Item uno</li>
             <li>Item uno</li>
         </ul>
         <ol type="i"><!-- Lista ordenada, se pueden definir diferentes tipos como
-            numérica (1), alfabética(a) y romana(i)-->
+            numérica (1), alfabética(a) y romana(i)ordered list-->
             <li>Item uno</li>
             <li>Item uno</li>
             <li>Item uno</li>
