--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,10 +25,10 @@ etiquetas para la semántica del body-->
             <h1>TechShop</h1>
         </header>
         <nav id="menu"><!-- Esta etiqueta es para ilustrarle al navegador que es un menú -->
-            <a href="Ejemplo9.html">Back</a>|<!-- Enlaces de referencia dentro del 
+            <a href="ejemplo9.html">Back</a>|<!-- Enlaces de referencia dentro del 
         mismo sitio, es una etiqueta de hipervínculo, href: hipervinculo reference-->
             <a href="index.html">Home</a>|
-            <a href="Ejemplo2.html">Next</a><br>
+            <a href="ejemplo2.html">Next</a><br>
         </nav>
         <aside id="barralateral"><!-- Etiqueta para indicar que es una barra lateral que puede ser 
             a la izquierda o a la derecha y pueden ser varias-->
@@ -191,7 +191,10 @@ etiquetas para la semántica del body-->
             <h6>Hola Mundo</h6>
         </div>
         <img src="images/cart.png" alt="Imagen de carro">
-        <a href="Home.html">Home</a>
+        <iframe src="https://www.youtube.com/embed/3NJ24lHVNao" width="500" 
+                height="400"></iframe><!-- Nos permite ingresar código HTML de otro 
+                sitio dentro de nuestro código, es un enlace absoluto-->
+        <a href="home.html">Home</a>
 
     </body>
 </html> <!-- Marca el final del texto HTML -->
